--- a/README
+++ b/README
@@ -2,6 +2,24 @@
 == Description
 Ruby/GSL, a ruby interface to GSL (GNU Scientific library)
 
+
+== INSTALL:
+
+* brew install gsl
+
+* Gemfile:
+gem 'gsl', :git => 'git://github.com/30robots/rb-gsl.git'
+
+* bundle install
+
+
+
+
+
+================================================================
+== PREV README BELOW
+================================================================
+
 == Installation
    (0) Make sure the command "gsl-config" is in search path.
    (1) % ruby setup.rb config
