--- a/README
+++ b/README
@@ -13,8 +13,11 @@ gem 'gsl', :git => 'git://github.com/30robots/rb-gsl.git'
 * bundle install
 
 
+FIXES:
+error: conflicting types for ‘gsl_matrix_complex_equal’
+gsl_matrix_complex_double.h:227: error: previous declaration of ‘gsl_matrix_complex_equal’ was here
 
-
+Patch from https://gist.github.com/1217974
 
 ================================================================
 == PREV README BELOW
